correction mineure version mobile-tablette index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -449,7 +449,6 @@ text-align:center;
 }
 
 #schools {
-  height: 100vh;
   width: 80%;
   margin-top: 2em;
   padding-top: 2.5em;
